@@ -18,8 +18,6 @@
 
     <properties>
         <skipITs>false</skipITs>
-        <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
-
         <!-- integration tests configuration -->
         <wko.it.skip.cleanup>${env.SKIP_CLEANUP}</wko.it.skip.cleanup>
         <wko.it.domain.version>${env.DOMAIN_VERSION}</wko.it.domain.version>
@@ -133,7 +131,7 @@
                             <goal>enforce</goal>
                         </goals>
                         <configuration>
-                            <skip>${wko.it.skip.enforcer.rules}</skip>
+                            <skip>${skipITs}</skip>
                             <rules>
                                 <requireEnvironmentVariable>
                                     <message>Set the TWO_CLUSTERS environment variable to true or false to specify whether to run inter-cluster communication tests.</message>
@@ -169,7 +167,7 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <argLine>@{argLine} --add-opens java.base/java.time=ALL-UNNAMED</argLine>
+                    <skipTests>${skipITs}</skipTests>
                     <argLine>${failsafeArgLine}</argLine>
                     <failIfNoTests>false</failIfNoTests>
                     <includes>
@@ -189,7 +187,6 @@
                         </goals>
                         <phase>integration-test</phase>
                         <configuration>
-                            <skipTests>${skipITs}</skipTests>
                             <systemPropertyVariables>
                                 <java.util.logging.SimpleFormatter.format>
                                     &lt;%1$tm-%1$td-%1$tY %1$tH:%1$tM:%1$tS&gt; &lt;%4$s&gt; &lt;%2$s&gt; &lt;%5$s%6$s&gt;%n
@@ -346,6 +343,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+          </plugin>
         </plugins>
     </build>
 
@@ -366,19 +367,6 @@
             <properties>
                 <skipITs>false</skipITs>
                 <includes-failsafe>**/It*</includes-failsafe>
-            </properties>
-        </profile>
-        <profile>
-            <id>fmw-image-cert</id>
-            <properties>
-                <skipITs>false</skipITs>
-                <includes-failsafe>
-                  **/ItMiiSample,
-                  **/ItFmwDomainInPV,
-                  **/ItFmwMiiDomain,
-                  **/ItFmwSample,
-                  **/ItFmwBigCMMiiDomain
-                </includes-failsafe>
             </properties>
         </profile>
         <profile>
@@ -404,15 +392,6 @@
                   **/ItPodsShutdownOption,
                   **/ItOCILoadBalancer,
                   **/ItManageNameSpace
-               </includes-failsafe>
-            </properties>
-        </profile>
-        <profile>
-            <id>resilience</id>
-            <properties>
-                <skipITs>false</skipITs>
-                <includes-failsafe>
-                  **/ItResilience
                </includes-failsafe>
             </properties>
         </profile>
@@ -609,13 +588,7 @@
             <id>wls-srg</id>
             <properties>
                 <skipITs>false</skipITs>
-                <includes-failsafe>
-                    **/ItKubernetesEvents,
-                    **/ItMiiAuxiliaryImage,
-                    **/ItMultiDomainModels,
-                    **/ItPodsRestart,
-                    **/ItTwoDomainsManagedByTwoOperators
-                </includes-failsafe>
+                <groups>gate,samples-gate</groups>
             </properties>
         </profile>
         <profile>
