@@ -1,4 +1,4 @@
-<!-- Copyright (c) 2017, 2021, Oracle and/or its affiliates.
+<!-- Copyright (c) 2017, 2022, Oracle and/or its affiliates.
      Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 -->
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -103,7 +103,6 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
-                        <version>${exec-maven-plugin-version}</version>
                         <executions>
                             <execution><!-- helm chart package-->
                                 <id>package-helm-charts</id>
@@ -127,7 +126,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>${maven-failsafe-plugin-version}</version>
                         <configuration>
                             <!-- run all tests -->
                             <includes>
@@ -135,7 +133,6 @@
                                 <include>**/*IT.java</include>
                                 <include>**/*AT.java</include>
                             </includes>
-                            <argLine>@{argLine} --add-opens java.base/java.time=ALL-UNNAMED</argLine>
                         </configuration>
                         <executions>
                             <execution>
@@ -150,9 +147,4 @@
             </build>
         </profile>
     </profiles>
-
-    <properties>
-        <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
-    </properties>
-
 </project>
